# PrivaCT-service

./: Cargo.toml  README.md
ct-service/: .env  Cargo.toml
ct-service/src/: main.rs  prism_client.rs
ct-service/src/log_list/: service.rs  types.rs
ct-service/src/prism_client/: key_manager.rs
devnet/: Cargo.toml
devnet/src/: main.rs
