[package]
name = "devnet"
version = "0.1.0"
edition = "2021"

[dependencies]
prism-prover = { git = "https://github.com/deltadevsde/prism", branch = "main", features = [
    "mock_prover",
] }
prism-keys = { git = "https://github.com/deltadevsde/prism", branch = "main" }
prism-storage = { git = "https://github.com/deltadevsde/prism", branch = "main" }
prism-da = { git = "https://github.com/deltadevsde/prism", branch = "main" }
keystore-rs = { version = "0.3" }
tokio = { version = "1.16.1", features = ["full"] }
log = "0.4.7"
pretty_env_logger = "0.5.0"
anyhow = "1.0.95"
ring = "0.17"
